<resources>
    <string name="app_name">Tenniverse</string>
    <string name="certification_number">인증 번호</string>
    <string name="input_phone">번호 입력</string>
    <string name="hint_certification">인증번호 6자리</string>
    <string name="hint_input_phone">-없이 번호를 입력하시오.</string>
    <string name="certification">인증하기</string>
    <string name="next">다음</string>
    <string name="input_name">이름 입력</string>
    <string name="hint_input_name">이름을 입력하시오.</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="zero">00</string>
    <string name="career_text_end">년 동안 쳐봤어요.</string>
    <string name="career_text_start">저는 테니스를</string>
    <string name="add_profile">프로필 추가</string>
    <string name="ok">확인했어요</string>
    <string name="send_phone_number">인증번호\n발송</string>
    <string name="profile_name">%s (%s)</string>
    <string name="profile_career">테니스 경력%s년</string>
    <string name="register">가입하기</string>
    <string name="success_auth">인증이 완료되었습니다.</string>
    <string name="failure_auth">인증 번호가 옳지 않습니다.</string>
    <string name="reserve_status">예약 현황</string>
    <string name="entire">전체</string>
    <string name="rental_daily">일일 대관</string>
    <string name="rental_regular">정기 대관</string>
    <string name="event">EVENT</string>
    <string name="user">user</string>
    <string name="skip"><![CDATA[건너뛰기 >]]></string>
    <string name="tenniverse">TENNIVERSE</string>
    <string name="tenniverse_kor">테니버스</string>
    <string name="recruit_new_team_member">새로운 팀원을 모집합니다.</string>
    <string name="master">고희재</string>
    <string name="user_management">user_management</string>
    <string name="user_management_kor">유저 관리</string>
    <string name="new_user_list">가입 신청 목록</string>
    <string name="accept">수락</string>
    <string name="reject">거절</string>
    <string name="create_day_rent">일일 대관 생성하기</string>
    <string name="rent_name">대관자 이름</string>
    <string name="rent_phone">대관자 연락처</string>
    <string name="game_place">경기 장소</string>
    <string name="game_calendar">경기 날짜</string>
    <string name="max_people">최대 인원</string>
    <string name="total_time">총 시간</string>
    <string name="coat_cnt">코트 수</string>
    <string name="coat_cost">코트 비용</string>
    <string name="doubles_gender">복식 성비</string>
    <string name="coat_type">코트 타입</string>
    <string name="bank">은행</string>
    <string name="hint_bank">카카오뱅크</string>
    <string name="account">계좌번호</string>
    <string name="hint_account">계좌번호를 입력하세요</string>
    <string name="significant">특이사항</string>
    <string name="hint_significant">전달사항 있으면 적어주세요.</string>
    <string name="create">생성하기</string>
    <string name="rent_count">생성 횟수</string>
    <string name="create_regular_rent">정기 대관 생성하기</string>
    <string name="choose_user">인원 선택</string>
    <string name="btn_create_regular_rent">정기 대관 생성</string>
    <string name="dateFormat">%d월 %d일 (%s)</string>
    <string name="hourFormat">%s %s ~ %s</string>
    <string name="information_people">%d/%d명</string>
    <string name="mixed">혼성 복식</string>
    <string name="man_double">남성 복식</string>
    <string name="women_double">여성 복식</string>
    <string name="man_single">남성 단식</string>
    <string name="woman_single">여성 단식</string>
    <string name="hour_format_rent">%s %s</string>
    <string name="edit_time">시간</string>
    <string name="edit_people">명</string>
    <string name="edit_count">개</string>
    <string name="edit_cost">원</string>
    <string name="double_gender_choice">복식 성비 선택</string>
    <string name="coat_type_choice">코트 타입 선택</string>
    <string name="unit_count">회</string>
    <string name="hard">하드</string>
    <string name="clay">클레이</string>
    <string name="grass">인조잔디</string>
    <string name="coat_data">%s·%d코트</string>
    <string name="account_number">계좌번호</string>
    <string name="copy">복사하기</string>
    <string name="account_format">%s %s</string>
    <string name="participate">참가하기</string>
    <string name="recruit">모집하기</string>
    <string name="cancel_participate">참가 취소</string>
    <string name="cancel_recruit">모집 마감</string>
    <string name="member_list">인원 명단</string>
    <string name="wait_member">신청 대기자</string>
    <string name="career_format">%d년</string>
    <string name="nothing_member">인원 명단이 없어요!</string>
    <string name="nothing_waiting">대기자가 없어요!</string>
    <string name="check_account">입금 정보 확인하기</string>
    <string name="closed">닫기</string>
    <string name="dialog_title_user_delete">해당 유저를 삭제하시겠습니까?</string>
    <string name="dialog_neg_user_delete">아니요</string>
    <string name="dialog_pos_user_delete">탈퇴</string>
    <string name="closed_recruit">모집이 마감되었습니다.</string>
    <string name="before_two_week">경기 시작 1주 전부터 참가 가능합니다.</string>
    <string name="event_place">모임 장소</string>
    <string name="event_name">주최자 이름</string>
    <string name="event_phone">주최자 연락처</string>
    <string name="create_event">이벤트 생성하기</string>
    <string name="hint_rent_significant">특이사항이 있으면 입력해주세요.</string>
    <string name="last_participate">참가신청하기</string>
    <string name="my_page">마이페이지</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="club">클럽장</string>
    <string name="court">코트장</string>
    <string name="weekly">정회원</string>
    <string name="normal">준회원</string>
    <string name="none">비회원</string>
    <string name="root">방장</string>
    <string name="hint_event_place">모임 장소를 알려주세요.</string>
    <string name="event_kor">이벤트</string>
    <string name="dialog_title_delete_rent_user">해당 유저의 참가를 취소하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="dialog_title_delete_rent">대관을 삭제하시겠습니까?</string>
    <string name="dialog_title_deadline_recruit">모집을 마감하시겠습니까?</string>
    <string name="dialog_title_cancel_participate">참가를 취소하시겠습니까?</string>
    <string name="logout">로그아웃</string>
    <string name="delete_user">회원 탈퇴</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="user_name">사용자 이름</string>
    <string name="gender">성별</string>
    <string name="tennis_career">테니스 구력</string>
    <string name="profile_tennis_career">테니스 구력 %d년</string>
    <string name="career_year">년</string>
    <string name="man_profile">남성</string>
    <string name="woman_profile">여성</string>
    <string name="save_edit">수정사항 저장</string>
    <string name="profile_name_gender">%s / %s</string>
    <string name="profile_phone">연락처 %s</string>
    <string name="profile_date_format">%s년 %s월</string>
    <string name="mypage_rent_total">총 %d회</string>
    <string name="dialog_title_ask_participate">경기에 참여하시겠습니까?</string>
    <string name="dialog_title_ask_delete_account">정말 탈퇴하시겠습니까?</string>
    <string name="dialog_title_ask_version_check">버전 업데이트가 존재합니다.</string>
    <string name="channel_id">fcm_channel</string>
    <string name="channel_name">fcm_channel_name</string>
    <string name="notification_title">%s대관에 빈 자리가 생겼습니다.</string>
    <string name="notification_body">푸쉬를 눌러 확인해보세요.</string>
    <string name="default_description">즐거운 경기해요 ~!</string>
</resources>